# ChessGame

./: CMakeLists.txt  README.md
backends/: imgui_impl_glfw.cpp
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_widgets.cpp
src/: main.cpp
src/chess/: Board.cpp  Board.h  Piece.cpp  Piece.h
src/ui/: ImGuiHandler.cpp  ImGuiHandler.h
